# duckclaw

./: .env.example  .env.immutable  .gitignore  AGENTS.md  CMakeLists.txt  COMANDOS.md  README.md  dump.rdb  ecosystem.config.cjs  ecosystem.core.config.cjs  mkdocs.yml  mypy.ini  n8n_telegram_workflow.json  pyproject.toml  requeriments.txt  setup.py  telegram.duckdb.wal
.cursor/: settings.json
.github/workflows/: deploy.yml
config/: api_gateways_pm2.json.example  langgraph.json  lora_config.yaml  mcp_servers.yaml
datalake/: README.md  load.sql  olist_order_payments.parquet  olist_products.parquet  olist_sellers.parquet  product_category_name_translation.parquet  schema.sql
docker/api/: Dockerfile
docker/base/: Dockerfile
docker/browser-env/: Dockerfile  strix-browser-init.sh
docker/inference/: Dockerfile  README.md
docker/sandbox/: Dockerfile
docs/: COMANDOS.md  Channels_Integration.md  Homeostasis-Heartbeat.md  Installation.md  Jugar-The-Mind.md  Multi-Vault-System.md  Observability-2.1-Identidad.md  Strix-Sandbox-Security.md  Troubleshooting-Gateway-PM2.md  hybrid-mesh.md  index.md  n8n-troubleshooting.md  n8n-workflow-review.md  plan-finanz-ibkr-portfolio-seguro.md  pm2-migration.md  telegram-integration.md
docs/agents/: adf_framework.md  finanz.md  quant_trader.md  sft_conversation_traces.md
docs/api/: api_gateway.md  db_writer.md
docs/architecture/: singleton_writer.md  strix_sandbox.md  tri_cameral_memory.md
docs/n8n/: workflow-duckclaw-bi-analyst-telegram.json  workflow-duckclaw-leila-telegram.json
docs/operations/: index.md
docs/specs/: context_injection_telegram.md  finanz_admin_sql_db_writer.md  index.md  telegram_webhook_multiplex.md  vlm_integration.md
duckclaw/: __init__.py  gateway_db.py
duckclaw/activity/: handoff_context.py  session_state.py  worker.py
duckclaw/agents/: __init__.py  general_graph.py  graph_server.py  on_the_fly_commands.py  retail_graph.py  router.py  sandbox.py  store_tools.py  telegram_bot.py  tools.py
duckclaw/api/: __init__.py  audit.py  auth.py  gateway.py  rate_limit.py
duckclaw/bi/: __init__.py  agent.py  excel_export.py  grpo_traces.py  markdown_export.py  olist.py  plots.py
duckclaw/data/: __init__.py  arrow_bridge.py
duckclaw/forge/: __init__.py  assembler.py  secret_vault.py  shadow_inference.py
duckclaw/integrations/: hardware_detector.py  llm_providers.py  telegram.py
duckclaw/multimodal/: __init__.py  transcriber.py  vision.py
duckclaw/ops/: cli.py  manager.py
duckclaw/rl/: __init__.py  rewards.py
duckclaw/skills/: README.md  entregas.md  (+3 more)
examples/: .env.telegram.example  telegram_bot.py
gateway-client/: README.md  angular.json  package-lock.json  package.json
include/: duckclaw.hpp
minecraft-server/: db.wal
mlx/: train_sft.py
notebooks/: duckclaw_olist_eda.ipynb  olist_bi_entregable.ipynb
output/: estrategias_negocio_olist.md  export_123ffaa4.xlsx  export_987a1ea1.xlsx  export_eced94d6.xlsx  mejoras_futuras_bi_duckclaw.md  rendimiento_enero_2018.md  resumen_ejecutivo_logros_olist.md  resumen_ejecutivo_logros_olist_html.html  resumen_ejecutivo_olist.md  resumen_ejecutivo_olist_html.html  ventas_noviembre_2017.md
prueba idata/: duckclaw_olist_eda.ipynb
scripts/: bootstrap_dbs.py  bootstrap_team_admin.py  check_authorized_users.py  create_delivery_package.py  disaster_recovery.sh  duckclaw_setup_wizard.py  eval_model.py  firewall_mac_mini.sh  init_store_db.py  inject_n8n_into_pm2_ecosystem.py  inspect_telegram_db.py  install_duckclaw.sh  mlx_hotswap.sh  openweather_city.py  patch_vps_observability_cash.py  patch_vps_portfolio_single_snapshot.py  recreate_gateway_db.py  register_webhooks.py  remap_weights.py  remote_inspect_db.sh  reqres_flow_debug.py  sanitize_traces_for_gemma.py  setup_media_tmpfs.sh  smoke_telegram_mcp_stdio.py  start_mlx.sh  tailscale_install_vps.sh  telegram_bot.py  test_duckclaw_vps.py  vps_check_snapshot.py  where_gateway_writes.py
site/: 404.html  index.html  objects.inv
specs/: 00_System_Infrastructure.md  01_Analytical_Memory_Architecture.md  02_Skills_and_Tooling_Framework.md  03_Cognitive_Agent_Logic.md  04_Singleton_Writer_Pipeline.md  API_Gateway_(FastAPI)_para_DuckClaw.md  Arquitectura_de_Red_Distribuida_(Tailscale_Mesh).md  CD)_para_Arquitectura_Distribuida.md  Estructura_Basada_en_Grafos_DuckDB_PGQ_GraphRAG.md  FLUJO_VIDA_DATO_PIPELINE.md  Flujo de Vida del Dato (Wizard).md  Inferencia_Elastica_(Hardware-Aware).md  Integracion_de_GitHub_MCP_en_DuckClaw.md  Migracion_de_Pipeline_de_Entrenamiento_(GRPO_a_SFT_con_MLX).md  Pipeline_Ingestion_Multimodal_Voz_Vision.md  README.md  Sandbox_de_Ejecucion_Libre_Basado_en_Strix.md  interfaz_de_comandos_dinamicos_On-the-Fly_CLI.md  sistema_de_plantillas_de_agentes_virtual_worker_factory.md
src/: __init__.py  bindings.cpp  duckclaw.cpp
tests/: conftest.py  run_singleton_writer_pipeline.py  test_agent_node_llm_failure_message.py  test_agent_resilience.py  test_api_gateway.py  test_bi_analyst_worker.py  test_browser_sandbox_stdout.py  test_build_llm_groq.py  test_chat_heartbeat.py  test_context_guard.py  test_context_injection.py  test_conversation_traces_align.py  test_db_write_task_status.py  test_duckclaw.py  test_duckclaw_ro_suspend.py  test_ephemeral_duckdb_gateway.py  test_field_reflection.py  test_final.py  test_finanz_admin_sql_heuristic.py  test_finanz_budgets_heuristic.py  test_finanz_cuentas_placeholder.py  test_finanz_deudas_read_pool_wrap.py  test_finanz_ibkr_after_cuentas.py  test_finanz_quant_market_http.py  test_fmp_dividends_tool.py  test_gateway_upsert_db_persist.py  test_goals_delta.py  test_grpo_rewards.py  test_heartbeat.py  test_homeostasis.py  test_ibkr_bridge_mode_fallback.py  test_job_hunter_output_validator.py  test_llm_provider_reconcile.py  test_llm_providers.py  test_logger_chat_identity_colors.py  test_manager_planner.py  test_manager_telegram_env_overlay.py  test_mercenary_sandbox.py  test_mlx_gemma4_model_alias.py  test_model_evaluator.py  (+52 more)
train/: README.md  golden_dataset.jsonl  grpo_olist_groups.jsonl  grpo_olist_traces.jsonl
viz/: diagrama-soporte-envios.md
(+219 files in other folders)
