# Raíz del monorepo DuckClaw — dependencias para scripts y servicios locales (p. ej. pipeline Singleton Writer)
[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duckclaw"
version = "0.0.1"
description = "DuckClaw monorepo root — run scripts and services"
requires-python = ">=3.9"
dependencies = [
    "redis>=5.0.0",
    "duckdb>=0.10.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0.0",
    "duckops",
    "duckclaw-agents",
    "duckclaw-core",
    "duckclaw-shared",
    "langchain-openai>=0.3.35",
    "mcp>=1.0.0; python_full_version >= '3.10'",
    "duckclaw-telegram-mcp; python_full_version >= '3.10'",
    "mlx-vlm>=0.4.2; sys_platform == 'darwin' and python_full_version >= '3.10'",
]

[project.optional-dependencies]
telegram = ["python-telegram-bot>=21.0"]
google-trends = ["google-trends-mcp>=1.0.2; python_full_version >= '3.10'"]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["duckclaw_workspace*"]

[tool.uv.sources]
duckops = { path = "packages/duckops", editable = true }
duckclaw-agents = { path = "packages/agents", editable = true }
duckclaw-core = { path = "packages/core", editable = true }
duckclaw-shared = { path = "packages/shared", editable = true }
duckclaw-telegram-mcp = { path = "packages/mcp/telegram", editable = true }

[dependency-groups]
dev = ["pytest>=7.0.0", "httpx>=0.25.0"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require Redis and full pipeline (deselect with '-m \"not integration\"')",
]
